<resources>
    <string name="app_name">CC</string>
    <string name="column_price">Price</string>
    <string name="column_name">Coin</string>
    <string name="column_24change"></string>
    <string name="column_number">#</string>
    <string name="refresh">Refresh</string>
    <string name="no_internet">No internet access</string>
    <string name="price_label">Price:</string>
    <string name="volume_label">Volume:</string>
    <string name="high_label">24H High:</string>
    <string name="low_label">24H Low:</string>
</resources>